--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center ">
                   <div class="text-white ">
                     <span class="">Hello, my name</span>
-                    <h2 class="fw-bolder"> Jhon Doe</h2>
+                    <h2 class="fw-bolder"> prasanth 
+                    </h2>
                     <h4>fullstack Developer !</h4>
 
                     <button class=" btn btn-outline-light rounded-pill btn-lg mt-3"> Download cv</button>
